Add title to images Add Favicon

--- a/howsolarworks.html
+++ b/howsolarworks.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Stephen Holden">
     <title>How Solar Works</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Notable">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Notable">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="icon" type="image/png" href="img/favicon.png">
 </head>
 
 <body>
     <header>
-        <img src="img/logo.png" alt="Inholland Solar Logo">
+        <img src="img/logo.png" title="Inholland Solar" alt="Inholland Solar Logo">
         <h1>
             Inholland Solar Energy
         </h1>
@@ -129,7 +130,7 @@
             <figure id="ad-1">
                 <a
                     href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/SCC110050210">
-                    <img src="img/SmartSolar-MPPT-10030.png" alt="Image of SmartSolar MPPT 10030">
+                    <img src="img/SmartSolar-MPPT-10030.png" alt="Image of SmartSolar MPPT 10030" title="SmartSolar MPPT 10030">
 
                 </a>
                 <figcaption>SmartSolar MPPT 10030</figcaption>
@@ -138,7 +139,7 @@
             <figure id="ad-2">
                 <a
                     href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/%22SMA+Sunny+Boy+SB3.6%22">
-                    <img src="img/sunny-boy-30-36-40-50-60.jpg" alt="Image of SMA SB3.6 Solar panels inverter 1 phase">
+                    <img src="img/sunny-boy-30-36-40-50-60.jpg" alt="Image of SMA SB3.6 Solar panels inverter 1 phase" title="SMA SB3.6 Solar panels inverter 1 phase">
                 </a>
                 <figcaption>SMA SB3.6 Solar panels inverter 1 phase</figcaption>
             </figure>
@@ -146,7 +147,7 @@
             <figure id="ad-3">
                 <a
                     href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/%22175Wp+12Volt++zonne-energie+set%22">
-                    <img src="img/Victron-175Wp-12Volt-Solar-panel-set.png" alt="Victron 175W 12Volt Solar panel set">
+                    <img src="img/Victron-175Wp-12Volt-Solar-panel-set.png" alt="Image of Victron 175W 12Volt Solar panel set" title="Victron 175W 12Volt Solar panel set">
                 </a>
                 <figcaption>Victron 175W 12Volt Solar panel set</figcaption>
             </figure>
