--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Solar Energy</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Notable">
-    <link rel="stylesheet" href="css/style.css">
     <meta name="author" content="Stephen Holden">
+    <title>Home - Solar Energy</title>
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Notable">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="icon" type="image/png" href="img/favicon.png">
 </head>
 
 <body>
     <header>
-        <img src="img/logo.png" alt="Inholland Solar Logo">
+        <img src="img/logo.png" title="Inholland Solar" alt="Inholland Solar Logo">
         <h1>
             Inholland Solar Energy
         </h1>
@@ -38,14 +39,16 @@
             <article id="article-1">
                 <h3>Victron SmartSolar MPPT 100-50 12V 24V charge controller</h3>
                 <a target="_blank" href="http://www.ikwilzonneenergie.nl/Victron-SmartSolar-MPPT-100-50-12V-24V"><img
-                        src="img/SmartSolar-MPPT-10030.png" alt="Product 2" class="article-image"></a>
+                        src="img/SmartSolar-MPPT-10030.png"
+                        alt="Image of Victron SmartSolar MPPT 100-50 12V 24V charge controller"
+                        title="Victron SmartSolar MPPT 100-50 12V 24V charge controller" class="article-image"></a>
                 <p>
                     A solar charger gathers energy from your solar panels, and stores it in your batteries.
                     Using the latest, fastest technology, SmartSolar maximises this energy-harvest, driving it
                     intelligently to achieve full charge in the shortest possible time.
                     SmartSolar maintains battery health, extending its life.
-                    The SmartSolar charge controller will even recharge a severely depleted battery.
-                    It can operate with a battery voltage as low as 0 Volts, provided the cells are not
+                    <strong>The SmartSolar charge controller</strong> will even recharge a severely depleted battery.
+                    It can operate with a battery voltage as low as <em>0 Volts</em>, provided the cells are not
                     permanently sulphated or otherwise damaged.
                     <a target="_blank"
                         href="https://www.victronenergy.com/solar-charge-controllers/smartsolar-100-30-100-50#pd-nav-image">Read
@@ -56,13 +59,14 @@
             <article id="article-2">
                 <h3>SMA SB3.6 Solar panels inverter 1 phase</h3>
                 <a target="_blank" href="http://www.ikwilzonneenergie.nl/SMA-Sunny-Boy-SB36-omvormer"><img
-                        src="img/sunny-boy-30-36-40-50-60.jpg" alt="Product 2" class="article-image"> </a>
+                        src="img/sunny-boy-30-36-40-50-60.jpg" alt="Image of SMA SB3.6 Solar panels inverter 1 phase"
+                        title="SMA SB3.6 Solar panels inverter 1 phase" class="article-image"> </a>
                 <p>
                     Established product features and integrated software solutions will provide yield
                     optimization throughout the system’s entire service life.
-                    Even in shading. SMA ShadeFix is a proprietary inverter software that optimizes energy yield
+                    Even in shading. <strong>SMA ShadeFix</strong> is a proprietary inverter software that optimizes energy yield
                     in nearly every situation.
-                    SMA Smart Connected inverter monitoring offers enhanced safety by detecting errors at an
+                    <strong>SMA Smart Connected inverter </strong>monitoring offers enhanced safety by detecting errors at an
                     early stage and automatically reporting them to the installer.
                     <a target="_blank"
                         href="https://www.sma.de/en/products/solarinverters/sunny-boy-30-36-40-50-60.html">Read
@@ -75,14 +79,14 @@
 
                 <a target="_blank"
                     href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/%22175Wp+12Volt++zonne-energie+set%22"><img
-                        src="img/Victron-175Wp-12Volt-Solar-panel-set.png" alt="Product 3" class="article-image"></a>
+                        src="img/Victron-175Wp-12Volt-Solar-panel-set.png" alt="Image of SMA SB3.6 Solar panels inverter 1 phase" title="SMA SB3.6 Solar panels inverter 1 phase" class="article-image"></a>
 
                 <p>
-                    Solar charge controllers Steca Solarix 2525 and 4040 are newly developed products based on
+                    Solar charge controllers <strong>Steca Solarix 2525 and 4040</strong> are newly developed products based on
                     the internationally renowned controller family Steca PR.
                     With increased module and load current, the controllers are now also suitable for even
                     larger systems.
-                    The devices also feature an integrated USB charging port for charging smartphones and
+                    The devices also feature an <em>integrated USB charging port</em> for charging smartphones and
                     tablets.
                     Use of the latest charging technologies combined with state of charge determination enable
                     optimal battery maintenance and module power monitoring.
