--- a/eusolar.html
+++ b/eusolar.html
@@ -32,7 +32,7 @@
         </ul>
     </nav>
     <main id="eu-solar">
-        
+
         <table>
             <caption>Solar Energy Percentage EU</caption>
             <thead>
@@ -454,7 +454,8 @@
             <figure id="ad-1">
                 <a
                     href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/SCC110050210">
-                    <img src="img/SmartSolar-MPPT-10030.png" alt="Image of SmartSolar MPPT 10030" title="SmartSolar MPPT 10030">
+                    <img src="img/SmartSolar-MPPT-10030.png" alt="Image of SmartSolar MPPT 10030"
+                        title="SmartSolar MPPT 10030">
 
                 </a>
                 <figcaption>SmartSolar MPPT 10030</figcaption>
@@ -463,7 +464,8 @@
             <figure id="ad-2">
                 <a
                     href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/%22SMA+Sunny+Boy+SB3.6%22">
-                    <img src="img/sunny-boy-30-36-40-50-60.jpg" alt="Image of SMA SB3.6 Solar panels inverter 1 phase" title="SMA SB3.6 Solar panels inverter 1 phase">
+                    <img src="img/sunny-boy-30-36-40-50-60.jpg" alt="Image of SMA SB3.6 Solar panels inverter 1 phase"
+                        title="SMA SB3.6 Solar panels inverter 1 phase">
                 </a>
                 <figcaption>SMA SB3.6 Solar panels inverter 1 phase</figcaption>
             </figure>
@@ -471,7 +473,8 @@
             <figure id="ad-3">
                 <a
                     href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/%22175Wp+12Volt++zonne-energie+set%22">
-                    <img src="img/Victron-175Wp-12Volt-Solar-panel-set.png" alt="Victron 175W 12Volt Solar panel set" title="Victron 175W 12Volt Solar panel set">
+                    <img src="img/Victron-175Wp-12Volt-Solar-panel-set.png" alt="Victron 175W 12Volt Solar panel set"
+                        title="Victron 175W 12Volt Solar panel set">
                 </a>
                 <figcaption>Victron 175W 12Volt Solar panel set</figcaption>
             </figure>
