--- a/index.html
+++ b/index.html
@@ -64,9 +64,11 @@
                 <p>
                     Established product features and integrated software solutions will provide yield
                     optimization throughout the system’s entire service life.
-                    Even in shading. <strong>SMA ShadeFix</strong> is a proprietary inverter software that optimizes energy yield
+                    Even in shading. <strong>SMA ShadeFix</strong> is a proprietary inverter software that optimizes
+                    energy yield
                     in nearly every situation.
-                    <strong>SMA Smart Connected inverter </strong>monitoring offers enhanced safety by detecting errors at an
+                    <strong>SMA Smart Connected inverter </strong>monitoring offers enhanced safety by detecting errors
+                    at an
                     early stage and automatically reporting them to the installer.
                     <a target="_blank"
                         href="https://www.sma.de/en/products/solarinverters/sunny-boy-30-36-40-50-60.html">Read
@@ -79,10 +81,13 @@
 
                 <a target="_blank"
                     href="https://www.ikwilzonneenergie.nl/epages/61494231.sf/nl_NL/?ObjectPath=/Shops/61494231/Products/%22175Wp+12Volt++zonne-energie+set%22"><img
-                        src="img/Victron-175Wp-12Volt-Solar-panel-set.png" alt="Image of SMA SB3.6 Solar panels inverter 1 phase" title="SMA SB3.6 Solar panels inverter 1 phase" class="article-image"></a>
+                        src="img/Victron-175Wp-12Volt-Solar-panel-set.png"
+                        alt="Image of SMA SB3.6 Solar panels inverter 1 phase"
+                        title="SMA SB3.6 Solar panels inverter 1 phase" class="article-image"></a>
 
                 <p>
-                    Solar charge controllers <strong>Steca Solarix 2525 and 4040</strong> are newly developed products based on
+                    Solar charge controllers <strong>Steca Solarix 2525 and 4040</strong> are newly developed products
+                    based on
                     the internationally renowned controller family Steca PR.
                     With increased module and load current, the controllers are now also suitable for even
                     larger systems.
