--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <section id="cookie-info">
             <h2>Cookie Statement</h2>
             <p>
-                This site uses Cookies to enhance your experience. By using this website you agree to our cookie policy
+                This site uses Cookies to enhance your experience. By using this website you agree to our cookie policy.
             </p>
         </section>
     </footer>
