Added stuff to match grading criteria

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Stephen Holden">
+    <meta name="keywords" content="Solar Energy, Energy, EU, Save, Solar panel, Green Energy, How Solar Works">
+
     <title>Contact</title>
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Notable">
     <link rel="stylesheet" type="text/css" href="css/style.css">
