--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Stephen Holden">
+    <meta name="keywords" content="Solar Energy, Energy, EU, Save, Solar panel, Green Energy, How Solar Works">
+
     <title>Home - Solar Energy</title>
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Notable">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -36,6 +38,7 @@
 
         <video src="video/solar.mp4" autoplay></video>
         <section id="articles">
+            <h2>Articles</h2>
             <article id="article-1">
                 <h3>Victron SmartSolar MPPT 100-50 12V 24V charge controller</h3>
                 <a target="_blank" href="http://www.ikwilzonneenergie.nl/Victron-SmartSolar-MPPT-100-50-12V-24V"><img
